--- a/LightMasterHub/package.json
+++ b/LightMasterHub/package.json
@@ -16,6 +16,7 @@
     "@abandonware/bleno": "github:abandonware/bleno",
     "bleno": "github:notjosh/bleno#inject-bindings",
     "bleno-mac": "github:notjosh/bleno-mac",
+    "usb": "^1.6.3",
     "ws": "^7.3.0",
     "xpc-connection": "github:sandeepmistry/node-xpc-connection#pull/26/head"
   },
