--- a/LightMasterMVVM/LightMasterMVVM/LightMasterMVVM.csproj
+++ b/LightMasterMVVM/LightMasterMVVM/LightMasterMVVM.csproj
@@ -31,6 +31,7 @@
     <AvaloniaResource Remove="Assets\ui-bluetooth.png" />
     <AvaloniaResource Remove="Views\DataAnalysis.xaml" />
     <AvaloniaResource Remove="Views\Matches.xaml" />
+    <AvaloniaResource Remove="Views\NotifyUser.xaml" />
     <AvaloniaResource Remove="Views\Tablets.xaml" />
     <AvaloniaResource Remove="Views\TheBlueAlliance.xaml" />
     <AvaloniaResource Remove="Views\UserControl1.xaml" />
@@ -55,6 +56,7 @@
     <None Remove="Views\DataAnalysis.xaml" />
     <None Remove="Views\MainWindow.xaml" />
     <None Remove="Views\Matches.xaml" />
+    <None Remove="Views\NotifyUser.xaml" />
     <None Remove="Views\Tablets.xaml" />
     <None Remove="Views\TheBlueAlliance.xaml" />
     <None Remove="Views\UserControl1.xaml" />
@@ -95,6 +97,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\optionselected.png" />
     <EmbeddedResource Include="Views\MainWindow.xaml" />
+    <EmbeddedResource Include="Views\NotifyUser.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\TheBlueAlliance.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
