--- a/LightMasterMVVM/LightMasterMVVM/LightMasterMVVM.csproj
+++ b/LightMasterMVVM/LightMasterMVVM/LightMasterMVVM.csproj
@@ -23,6 +23,10 @@
     <AvaloniaResource Remove="Assets\caret-up.png" />
     <AvaloniaResource Remove="Assets\database-white.png" />
     <AvaloniaResource Remove="Assets\icofont.ttf" />
+    <AvaloniaResource Remove="Assets\LightScoutLogo.png" />
+    <AvaloniaResource Remove="Assets\LightScoutQR.png" />
+    <AvaloniaResource Remove="Assets\LightScoutQRThin.png" />
+    <AvaloniaResource Remove="Assets\LightScoutThick.png" />
     <AvaloniaResource Remove="Assets\optionselected.png" />
     <AvaloniaResource Remove="Assets\plugin.png" />
     <AvaloniaResource Remove="Assets\plugin.svg" />
@@ -56,6 +60,10 @@
     <None Remove="Assets\caret-up.png" />
     <None Remove="Assets\database-white.png" />
     <None Remove="Assets\icofont.ttf" />
+    <None Remove="Assets\LightScoutLogo.png" />
+    <None Remove="Assets\LightScoutQR.png" />
+    <None Remove="Assets\LightScoutQRThin.png" />
+    <None Remove="Assets\LightScoutThick.png" />
     <None Remove="Assets\optionselected.png" />
     <None Remove="Assets\plugin.png" />
     <None Remove="Assets\plugin.svg" />
@@ -78,6 +86,18 @@
     <None Remove="Views\TabletLogs.xaml" />
     <None Remove="Views\Tablets.xaml" />
     <None Remove="Views\TheBlueAlliance.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\LightScoutThick.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\LightScoutLogo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\LightScoutQRThin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\LightScoutQR.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\database-white.png" />
